--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,11 @@
 python-telegram-bot==20.3
-aiohttp==3.8.4
+aiohttp>=3.8.4,<4.0.0
 nltk==3.8.1
-cython==0.29.36
+cython>=0.29.36
+httpx>=0.24.0,<0.25.0
+attrs>=21.2.0
+charset-normalizer>=2.0
+multidict>=5.0,<7.0
+async-timeout>=4.0,<5.0
+frozenlist>=1.1.1
+aiosignal>=1.2.0
